--- a/Window.ui
+++ b/Window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>331</width>
-    <height>360</height>
+    <height>319</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,9 +46,6 @@
         <property name="suffix">
          <string> px</string>
         </property>
-        <property name="singleStep">
-         <number>30</number>
-        </property>
        </widget>
       </item>
       <item row="1" column="0">
@@ -76,9 +73,6 @@
        <widget class="QSpinBox" name="regionHeight">
         <property name="suffix">
          <string> px</string>
-        </property>
-        <property name="singleStep">
-         <number>30</number>
         </property>
        </widget>
       </item>
@@ -111,7 +105,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Biotronic</string>
+      <string>Recognize</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
@@ -155,27 +149,65 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="originalImage">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
+      <string>Display</string>
      </property>
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <widget class="QRadioButton" name="display1">
+        <property name="text">
+         <string>Capture</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QRadioButton" name="display2">
+        <property name="text">
+         <string>ecognize</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QRadioButton" name="display3">
+        <property name="text">
+         <string>Hints</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="4">
+       <widget class="Visualizer" name="visualizer">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <layoutdefault spacing="2" margin="5"/>
+ <customwidgets>
+  <customwidget>
+   <class>Visualizer</class>
+   <extends>QFrame</extends>
+   <header location="global">Visualizer.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
