--- a/Window.ui
+++ b/Window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>331</width>
-    <height>319</height>
+    <height>326</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -167,7 +167,7 @@
       <item row="0" column="1">
        <widget class="QRadioButton" name="display2">
         <property name="text">
-         <string>ecognize</string>
+         <string>Recognize</string>
         </property>
        </widget>
       </item>
@@ -178,7 +178,7 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0" colspan="4">
+      <item row="1" column="0" colspan="3">
        <widget class="Visualizer" name="visualizer">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
