Added 2 gui options a 4 bomb training files (missing 3).

--- a/data/data.qrc
+++ b/data/data.qrc
@@ -7,5 +7,9 @@
         <file>class4.png</file>
         <file>class5.png</file>
         <file>class6.png</file>
+        <file>bomb0.png</file>
+        <file>bomb1.png</file>
+        <file>bomb2.png</file>
+        <file>bomb6.png</file>
     </qresource>
 </RCC>
